--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    
 }
 
 .header {
@@ -60,6 +63,7 @@ hr {
 
 }
 
+
 .image_content {
     display: flex;
     flex: 2;
@@ -102,19 +106,25 @@ hr {
     display: flex;
     flex-direction: column;
     margin-top: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 32px;
 }
 
 .form_in > input, textarea {
-    width: 300px;
+    width: 320px;
     height: 45px;
     border-radius: 5px;
     border-color: #000000;
     margin-top: 8px;
 }
 
+.submit {
+    background-color: #ffffff;
+    box-shadow: 5px 5px #000000;
+}
+
+
 .package_title {
-    background-color: #000000;
+    background-color: #272626;
     text-align: center;
     color: #ffffff;
     height: 82px;
@@ -122,6 +132,7 @@ hr {
     align-items: center;
     justify-content: center;
     margin-top: 82px;
+    font-size: 35px;
 }
 
 .card_container {
@@ -213,4 +224,50 @@ hr {
     color: #000000;
     border-radius: 5px;
     box-shadow: 5px 5px #000000;
+    cursor: pointer;
+}
+
+
+.contact_container {
+    text-align: center;
+}
+
+.contact_title {
+    background-color: #272626;
+    height: 82px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 82px;
+    color: #ffffff;
+    font-size: 35px;
+}
+
+.contact_content {
+    margin-top: 44px;
+}
+
+.contact_content > p {
+    font-size: 18px;
+}
+
+/* .icon_content {
+    padding: ;
+} */
+
+.img {
+    width: 30px;
+    height: 30px;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
+.footer_container {
+    background-color: #000000;
+    height: 68px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 32px;
 }
